Making auth framework uniform
